# SimpleLanguageInterpreter

./: CMakeLists.txt  README.md  inputData.txt  main.cpp
inputFiles/: inputData.txt
src/ast/: Variable.cpp  Variable.h  Variables.h
src/ast/expression/: AndExpr.cpp  AndExpr.h  LogicExpr.cpp  LogicExpr.h  LogicExpression.h  MathExpr.cpp  MathExpr.h  MathExpression.h  RelationExpr.cpp  RelationExpr.h
src/ast/statement/: AssignStatement.cpp  AssignStatement.h  Statement.h
src/lexer/: Lexer.cpp  Lexer.h
src/parser/: Parser.cpp  Parser.h
src/reader/: Position.cpp  Position.h  Reader.cpp  Reader.h
src/scanner/: Position.cpp  Position.h  Scanner.cpp  Scanner.h
src/token/: Token.cpp  Token.h
